<resources>
    <string name="app_name">Study Cards</string>
    <string name="invalid_login">Invalid username or password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="email">Email</string>
    <string name="login_btn">Log in</string>
    <string name="sign_up_txt">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="invalid_username">This username is already taken</string>
    <string name="invalid_email">This email is already assigned to another user</string>
    <string name="account_created">The account has been successfully created</string>
    <string name="subjectActivityTitle">Subjects</string>
    <string name="showQues">Show question</string>
    <string name="showAnsw">Show answer</string>
    <string name="nextQues">Skip</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="password_dialog_message">Your Study Cards account\'s password will be sent to your e-mail</string>
    <string name="password_sent">The password has been sent to your email</string>
    <string name="no_email">There is no e-mail associated to:\u0020</string>
    <string name="share_facebook">Share on Facebook</string>


    <string name="facabook_app_id">759487294457878</string>



</resources>
