<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/usernameTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/invalid_username"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/usernameTxtField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/passwordTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/password"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/passwordTxtField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/confirmPasswordTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/confirm_password"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/confirmPasswordTxtField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/emailTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/invalid_email"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/emailTxtField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/signUpBtn"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/selector_sign_up_btn"
            android:text="@string/sign_up" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:background="@android:color/transparent" />
    </LinearLayout>

</ScrollView>